added bold text

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 
         <div class="numbers">
             <h3>Pricing</h3>
-            <p>1: $1.99</p>
-            <p>2-50: $1.49</p>
-            <p>51+: $0.99</p>
+            <p><strong>1:</strong> $1.99</p>
+            <p><strong>2-50:</strong> $1.49</p>
+            <p><strong>+51:</strong> $0.99</p>
         </div>
 
 
